# precision_track

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: flake8.yaml  formatting.yaml  tests.yaml
Colab/: inference_pipeline.ipynb  training_pipeline.ipynb
configs/: README.md
configs/deeplabcut/: evaluation.py  visualization.py
configs/metadata/: README.md  coco.py
configs/models/: rtmdet-pose.py  yolox-pose.py
configs/settings/: _base_.py  ap.py  coco.py  mice.py
configs/sleap/: evaluation.py  visualization.py
configs/tasks/: deploying.py  testing_action_recognition.py  testing_detection.py  testing_tracking.py  tracking.py  training_action_recognition.py  training_detection.py  training_feature_extraction.py
configs/wandb/: README.md  keys.py
docker/: building_image.sh  create_image.sh  dockerfile.cpu  dockerfile.cuda
precision_track/: __init__.py  registry.py  version.py
precision_track/apis/: __init__.py  association_step.py  evaluator.py  result.py  runner.py  tracker.py  visualizer.py
precision_track/datasets/: __init__.py  coco.py  sequence.py
precision_track/deploy/: __init__.py  precision_track_detection.py  to_onnx.py  to_tensorrt.py
precision_track/evaluation/: dlc.ipynb  (+2 more)
requirements/: build.txt  cuda.txt
tests/: test_action_recognition.py  test_csv.py  test_formatting.py  test_matching.py  test_npy.py  test_tracking.py  utils.py
tools/: README.md  deploy.py  profile_tracking.py  test.py  track.py  train.py  visualize.py
(+136 files in other folders)
